# embedded-intent-recognizer

./: CMakeLists.txt  README.md
python class/: ModelClass.py  Multioutput text classification.ipynb
source/: app.cpp  model.py
